@@ -6,24 +6,24 @@ html:
 if HAVE_DOCBOOK
 	if test -w $(srcdir); then \
 	  (cd $(srcdir); \
-	   db2html gmime-tut.sgml; \
+	   $(DB2HTML) gmime-tut.sgml; \
 	   test -d html && rm -r html; \
 	   mv gmime-tut html); \
 	fi
 else
 	echo "***"
-	echo "*** Warning: Tutorial not built"
+	echo "*** Warning: HTML version of the tutorial not built"
 	echo "***"
 endif
 
 pdf:
 if HAVE_DOCBOOK
 	if test -w $(srcdir); then \
-	  (cd $(srcdir); db2pdf gmime-tut.sgml); \
+	  (cd $(srcdir); $(DB2PDF) gmime-tut.sgml); \
 	fi
 else
 	echo "***"
-	echo "*** Warning: Tutorial not built"
+	echo "*** Warning: Pdf version of the tutorial not built"
 	echo "***"
 endif
 
